# PSEProject

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PSE_Entwurf.txt  PSE_Pflichtenheft.txt  README.md  Test6  diagram.puml  project_export.json  pyproject.toml  resources.qrc
.github/workflows/: python-app.yml
Files/: simple_3_layer_net x10.onnx
QS/: qs_common.py  run_qs_checks.py
QS/GUI/: gui_performance_info.txt  gui_performance_results.json  gui_smoke_results.json  gui_startup_info.txt  gui_startup_results.json  gui_testplan.txt  run_gui_qs.py  run_gui_startup_qs.py
QS/PROFILING/: profiling_metrics.csv  profiling_results.json  run_profiling_qs.py  runtime_info.txt
QS/QUALITY/: quality_info.txt  quality_metrics.csv  quality_results.json  quality_summary.json  run_quality_qs.py
QS/TS1/: B1.csv  ts1.txt
QS/TS2/: BE1.csv  BE2.vnnlib  NNE.onnx  ts2.txt
TestAlgo/: Test.py  box_ibp_autolirpa.py
TestFiles/: IR11_1.onnx  IR11_1_gemm.onnx  IR11_2_gemm.onnx  NN1.onnx  feastconv_Opset17.onnx  four_row_test.vnnlib  riai.onnx  simple_3_layer_net x100.onnx  simple_3_layer_net x50.onnx  simple_3_layer_net.onnx  simple_4_layer_net_ir11_200.onnx  three_row_test.csv  two_row_test.csv
TestResults/GUI_QS/: gui_smoke_results.json  gui_testplan.txt
TestResults/PROFILING_QS/: profiling_metrics.csv  profiling_results.json  runtime_info.txt
TestResults/QS/: gui_smoke_results.json  profiling_metrics.csv  profiling_results.json  quality_metrics.csv  quality_results.json  summary.json
TestResults/QUALITY_QS/: quality_info.txt  quality_metrics.csv  quality_results.json
TestResults/Systemtest/: Systemtest.txt
TestResults/TS1/: ts1.txt
TestResults/TS2/: NN2.onnx  ts2.txt
algorithms/: Test.py  backward_autolirpa.py  box_ibp_autolirpa.py  box_ibp_numpy.py  box_no_autolirpa.py  cancel_test.py  crown_autolirpa.py  forward_autolirpa.py  input_bounds_check.py  interval_width_baseline.py  sampling_baseline.py  simple_zonotope.py
build_preparation/linux/: install.sh  requirements.txt
build_preparation/windows/: install.bat  requirements.txt
controller/input_manager/: network_view_controller.py  plot_config_dialog_controller.py  plot_view_controller.py
controller/process_manager/: algorithm_executor.py  network_modifier.py
docs/: index.html  nn_verification_visualisation.html  search.js
docs/nn_verification_visualisation/: controller.html  model.html  resources_rc.html  utils.html  view.html
model/data/: algorithm.py  diagram_config.py  input_bounds.py  network_verification_config.py  neural_network.py  plot.py  plot_generation_config.py  save_state.py  storage.py
model/data_exporter/: image_exporter.py  plot_exporter.py  save_state_exporter.py
model/data_loader/: algorithm_loader.py  input_bounds_loader.py  neural_network_loader.py  (+2 more)
tests/: conftest.py  test_qs_gui_performance.py  test_vnncomp_integration.py
tools/: Test10  generate_20000_neuron_test_model.py  generate_test_model.py  qs_common.py  run_gui_qs.py  run_profiling_qs.py  run_qs_checks.py  run_quality_qs.py
utils/: result.py
(+314 files in other folders)
