[project]
name = "nn_verification_visualisation"

dynamic = ["version"]

requires-python = ">=3.10"

dependencies = [
  "pyside6 >= 6.10.1",
  "onnxruntime >= 1.23.0",
  "numpy >= 2.2.6",
  "matplotlib >= 3.10.8",
  "watchdog >= 6.0.0",
  "onnx >= 1.20.0"
]

description = ""
readme = "README.md"

authors = [
    {name="Alexander Mikhaylov"},
    {name="Cedric Linde"},
    {name="Elias Dörr"},
    {name="Enrique Lopez"},
    {name="Paul Schepperle"}
]

[project.scripts]
nn_verification_visualisation = "nn_verification_visualisation.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
]